# ai-code-assistant

./: .gitignore  README.md  build.ps1  build.sh  docker-compose.yml  env.example  main.py  pyproject.toml  requirement.txt  start.ps1  start.sh  stop.ps1  stop.sh
.kiro/specs/multi-agent-code-assistant/: design.md  requirements.md  tasks.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: coder.py  debugger.py  graph.py  planner.py  reviewer.py  router.py
backend/app/api/: chat.py  complete.py  health.py  index.py
backend/app/llm/: client.py  models.py
backend/app/prompts/: coder.md  debugger.md  planner.md  reviewer.md
backend/app/rag/: chunker.py  embeddings.py  indexer.py  retriever.py
backend/app/state/: schemas.py
docs/: implementation-guide.md
extension/: package.json
extension/src/: extension.ts
extension/src/actions/: CodeActionProvider.ts  CodeLensProvider.ts
extension/src/backend/: BackendClient.ts  StreamHandler.ts
extension/src/chat/: ChatViewProvider.ts  chatWebview.html
extension/src/completion/: CompletionProvider.ts
extension/src/config/: Settings.ts
extension/src/context/: DiagnosticsContext.ts  FileContext.ts  TreeSitterParser.ts
extension/src/status/: StatusBar.ts
lang-graph/: 1_basics.ipynb  2_basic_chatbot.ipynb  3_persistemnce.ipynb
lang-graph/chatbot/: chatbot_backend.py  requirement.txt  streamlit_frontend.py
