[project]
name = "multi-agent-code-assistant-backend"
version = "0.1.0"
description = "Multi-agent code assistant backend — FastAPI + LangGraph + RAG"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "sse-starlette>=2.0.0",
    "tree-sitter>=0.22.0",
    "rank-bm25>=0.2.2",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
